Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/app-root: /swagger/index.html
    #nginx.ingress.kubernetes.io/default-backend: ingress-nginx/custom-default-backend

spec:
  tls:
  - hosts:
    - fitverse.pl
    secretName: example-app-tls
  rules:
    - host: fitverse.pl
      http:
        paths:
          - path: /api/members
            pathType: Prefix
            backend:
              service:
                name: ms-service
                port:
                  number: 82
          - path: /api/agreements
            pathType: Prefix
            backend:
              service:
                name: as-service
                port:
                  number: 84
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 81
